# xfbin-nucc-binary

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: dds_file.rs  lib.rs  lua_file.rs  player_color_param.rs  png_file.rs  utils.rs
src/nucc_binary_parsed/: characode.rs  ev_file.rs  fcv_file.rs  message_info.rs  mod.rs  player_color_param.rs  prm_load.rs  sound_test_param.rs  stage_info.rs  xml_file.rs
