[package]
name = "xfbin-nucc-binary"
version = "0.1.0"
edition = "2021"
description = "Library for serializing/deserializing nuccChunkBinary structs for CyberConnect2 games XFBIN files."
repository = "https://github.com/SutandoTsukai181/xfbin-nucc-binary"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
